<resources>
    <string name="app_name">dataManagementNirApp</string>
    <string name="noServerSetupNotice">You have no server set up</string>
    <string name="setUpAServer">Set up a server</string>
    <string name="headerServerSetup">Server setup</string>
    <string name="serverSocket">Server socket</string>
    <string name="serverTestLog">Log will be here</string>
    <string name="serverSettingsSubmit">Save settings</string>
    <string name="loginHeader">Welcome!  Please log in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="connecting">connecting…</string>
    <string name="currentLogin">Currently log on as: </string>
    <string name="currentServerSocket">Server </string>
    <string name="serverTest">Test connection</string>
    <string name="mainMenuHeader">Available actions: </string>
    <string name="successfulServer">Server reachable</string>
    <string name="serverStatusConnected">connected</string>
    <string name="serverStatusDisconnected">disconnected</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="serverUnreachable">Server unreachable</string>
    <string name="wrongUsernameOrPassword">Wrong username or password</string>
    <string name="failedLogon">Logon failed</string>
    <string name="username">Username: </string>
    <string name="role">Role: </string>
    <string name="logout">Logout</string>
    <string name="settings">Clear app\'s memory</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmationMessage">Are you sure you want to wipe the app\'s memory?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addAnEntry">Add an entry</string>
    <string name="catalogue_name">Item name:</string>
    <string name="catalogue_price">Item price:</string>
    <string name="posting_as">Posting as: </string>
    <string name="tokenMessage">It seems like your token has expired. Try long clicking the refresh button</string>
    <string name="noDeletePermission">You have no permissions to delete</string>
    <string name="noEditPermission">You have no permissions to edit</string>
    <string name="noAddPermission">You have no permissions to add</string>
    <string name="holdDownDelete">Hold down the button to confirm deletion</string>
    <string name="clientName">Client\'s name ([name] [lastName] [patronymic]) </string>
    <string name="clientPhone">Client\'s phone number</string>
    <string name="wrongName">Please enter a valid name</string>
    <string name="choose">Choose…</string>
    <string name="quantityInStorage">Specify quantity</string>
    <string name="awaitingArrival">Arrival of: </string>
    <string name="enterADate">Enter the date: </string>
    <string name="chooseAnItem">Choose an item</string>
    <string name="wrongDate">Please use (yyyy-dd-mm)</string>
    <string name="chooseThis">Choose</string>
    <string name="orderID">Order ID: </string>
    <string name="quantity">Quantity: </string>
    <string name="chooseAClient">Choose a client</string>
    <string name="longPressQuantityNotice">Enter number manually</string>
    <string name="pleaseChooseACatalogue">Please choose an item</string>
    <string name="cancel">Cancel</string>
    <string name="sortByDate">By date</string>
    <string name="sortByPrice">By price</string>
    <string name="generateReport">Generate a sales report…</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>

</resources>