<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButtonCatalogue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="36dp"/>

    <TextView
            android:text="@string/posting_as"
            android:layout_width="131dp"
            android:layout_height="31dp"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"/>

    <TextView
            android:text="TextView"
            android:layout_width="245dp"
            android:layout_height="31dp"
            android:id="@+id/posting_as_text"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>

    <TextView
            android:text="@string/role"
            android:layout_width="63dp"
            android:layout_height="33dp"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="24sp"/>

    <TextView
            android:text="TextView"
            android:layout_width="311dp"
            android:layout_height="32dp"
            android:id="@+id/role_posting_as"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="32dp"
            android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:id="@+id/clientNameInput"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="260dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/clientName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="403dp"
            android:layout_height="57dp"
            app:layout_constraintTop_toBottomOf="@+id/clientNameInput"
            android:layout_marginTop="88dp"
            android:id="@+id/clientPhoneInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/clientPhone"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>