<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/catalogueNameInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="332dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/catalogue_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButtonCatalogue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/cataloguePriceInput"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/catalogueNameInput"
            android:layout_marginTop="64dp"
            android:id="@+id/cataloguePriceInput">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/catalogue_price"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="@string/posting_as"
            android:layout_width="131dp"
            android:layout_height="31dp"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"/>

    <TextView
            android:text="TextView"
            android:layout_width="245dp"
            android:layout_height="31dp"
            android:id="@+id/posting_as_text"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>

    <TextView
            android:text="@string/role"
            android:layout_width="63dp"
            android:layout_height="33dp"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="24sp"/>

    <TextView
            android:text="TextView"
            android:layout_width="311dp"
            android:layout_height="32dp"
            android:id="@+id/role_posting_as"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="32dp"
            android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>